--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,16 @@
-@import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
 body,
 html {
-    font-family: "Kanit", sans-serif;
-    font-size: 1.1em;
+    font-family: "Roboto", sans-serif;
 }
 
 .app-primary-color {
     color: #0080ff;
 }
 
-nav, .app-primary-bg-color {
+nav,
+.app-primary-bg-color {
     background-color: #0080ff;
 }
 
@@ -26,7 +26,8 @@ nav, .app-primary-bg-color {
     margin-top: 1rem;
 }
 
-.navbar-nav .nav-link, .navbar-toggler {
+.navbar-nav .nav-link,
+.navbar-toggler {
     color: white;
     border-color: white;
 }
